# hgsel-moe

./: .dockerignore  .gitignore  ADVANCED_BENCHMARKS.md  COLAB_PRO_GUIDE.md  Dockerfile.vast  PHASE1_COMPLETION.md  PHASE2_COMPLETION.md  PHASE3_COMPLETION.md  PHASE4_COMPLETION.md  PHASE4_PLANNING.md  PHASE5_COMPLETION.md  PHASE5_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  README.md  pyproject.toml  requirements.txt  test_trace_integration.py
experiments/: __init__.py  benchmark_300m.py  benchmark_distributed_300m.py  benchmark_speedups.py  benchmark_token_exchange_micro.py  dist_smoke.py  expert_interference_benchmark.py  generate_performance_report.py  microbenchmark_all_to_all.py  phase3_convergence.py  phase3_quick_test.py  phase4_gate_report.py  tail_latency_decomposition.py  trace_driven_workset.py  train_300m.py  train_distributed_300m.py  train_gpu_baseline.py  validate_phase3.py  validate_training.py  verify_expert_batching.py
experiments/baselines/: __init__.py  dense_transformer.py
experiments/configs/: __init__.py  hgsel_tiny.yaml
hgsel/: __init__.py
hgsel/distributed/: __init__.py  dispatch_api.py  dispatch_pipeline.py  (+9 more)
notebooks/: __init__.py  advanced_benchmarks_analysis.ipynb  phase4_colab_validation.ipynb  phase4_kaggle_gate_run.ipynb
scripts/: vast_easy_run.sh
tests/: __init__.py  test_dispatch_api.py  test_dist_data.py  test_dist_smoke.py  test_dist_utils.py  test_distributed_integration.py  test_distributed_trainer_single.py  test_expert_sharding.py  test_hgsel_replacement.py  test_phase1.py  test_profiling.py  test_token_exchange.py
(+18 files in other folders)
