[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hgsel"
version = "0.1.0"
description = "Hash-based Gradient-guided Sparse Expert Layer for dense Transformers"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "HGSEL Contributors", email = "contributors@hgsel.dev"}
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "wandb>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "isort>=5.10",
    "flake8>=4.0",
    "mypy>=0.950",
]
ml = [
    "transformers>=4.20.0",
    "datasets>=2.0.0",
    "tensorboard>=2.8.0",
]
distributed = [
    "horovod>=0.24.0",
    "torch-distributed-url>=0.1.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["hgsel*"]

[tool.setuptools.package-data]
hgsel = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
